Omnibox UI Refresh: Fix unwanted textfield jog with a selected keyword

When there is a selected keyword label, i.e. "Search Google", we already
indent the selected keyword label to align with the suggestions text.

Further jogging over the textfield just moves the text for no apparent
purpose.

This CL fixes that.

Bug: 871265
Change-Id: I956577e741359efa8a3293ef160de39f4c2c952c
Reviewed-on: https://chromium-review.googlesource.com/1166299
Commit-Queue: Tommy Li <tommycli@chromium.org>
Reviewed-by: Kevin Bailey <krb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581595}
Former-commit-id: 3836b7bb777e308be37c3123219124f911c5109a